tests/ui/consts/stable-precise-live-drops-in-libcore.stderr
error[E0493]: destructor of `Either<T, T>` cannot be evaluated at compile-time
  --> $DIR/stable-precise-live-drops-in-libcore.rs:13:25
   |
LL |     pub const fn unwrap(self) -> T {
   |                         ^^^^ the destructor for this type cannot be evaluated in constant functions
...
LL |     }
   |     - value is dropped here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0493`.
